# patchnar

./: .gitignore  Makefile.am  README.md  configure.ac  flake.nix  meson.build  package-autotools.nix  package-cmake.nix  package-meson.nix  package.nix
.github/workflows/: publish.yml
m4/: ax_cxx_compile_stdcxx.m4
src/: CMakeLists.txt  Makefile.am  bun_graph.cc  bun_graph.cpp  meson.build  nar.cc  nar.h  patchelf.cc  patchelf.h  patchnar.cc  source_patcher.cc  source_patcher.h
tests/: Makefile.am  test-comment-patching.sh  test-glibc-substitution.sh  test-hash-mappings.sh  test-helper.sh  test-language-detection.sh  test-shebang-patching.sh  test-string-patching.sh  test-symlink-patching.sh  test-transform-store-path.sh
